--- a/app.json
+++ b/app.json
@@ -17,12 +17,19 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.pes.restaurants"
     },
     "android": {
+      "package":"com.pes.restaurants",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
+      },
+      "config":{
+        "googleMaps":{
+          "apiKey":"AIzaSyDXp9wvBineOGeZRRXYZ1jtpxCPf_h9wtM"
+        }
       },
       "permissions": [
         "CAMERA_ROLL",
