--- a/package.json
+++ b/package.json
@@ -20,20 +20,23 @@
     "expo-location": "^13.0.4",
     "expo-permissions": "^13.0.3",
     "expo-status-bar": "~1.1.0",
-    "firebase": "7.9.0",
+    "firebase": "^7.9.0",
+    "moment": "^2.29.1",
     "random-uuid-v4": "^0.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-easy-toast": "^2.0.0",
-    "react-native-elements": "^3.4.2",
+    "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^0.29.4",
+    "react-native-open-maps": "^0.3.5",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
