--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
+    "expo-constants": "^13.0.0",
+    "expo-google-sign-in": "^10.1.0",
     "expo-image-picker": "^11.0.3",
     "expo-location": "^13.0.4",
+    "expo-notifications": "^0.14.0",
     "expo-permissions": "^13.0.3",
     "expo-status-bar": "~1.1.0",
-    "firebase": "^7.9.0",
-<<<<<<< Updated upstream
+    "firebase": "^7.9.0",    
+    "firesql": "^2.0.2",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
-=======
->>>>>>> Stashed changes
     "random-uuid-v4": "^0.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -43,7 +45,7 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
