--- a/app.json
+++ b/app.json
@@ -37,7 +37,8 @@
         "WRITE_EXTERNAL_STORAGE",
         "LOCATION",
         "ACCESS_COARSE_LOCATION",
-        "ACCESS_FINE_LOCATION"
+        "ACCESS_FINE_LOCATION",
+        "USER_FACING_NOTIFICATIONS"
       ]
     },
     "web": {
